--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
   <style>
     body {
       width: 320px;
-      padding: 5px 10px 0 10px;
+      padding: 0px 10px 0px 10px;
       margin: 0;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
       font-size: 14px;
